--- a/home.html
+++ b/home.html
@@ -10,7 +10,18 @@
         * {
             margin: 0px;
             padding: 0px;
+
+            font-family: Arial, Helvetica, sans-serif;
         }
+        
+        ::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
+img {
+    width: 100vw;
+}
         
         body {
             width: 100vw;
