--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
 
     </section>
     <section id="redes-sociais">
-       <a href="#" target=""><img src="imagens/logo-home.jpg" alt=""></a><br>
-       <a href="#" target=""><img src="imagens/logo-youtube.jpg" alt=""></a><br>
-       <a href="#" target=""><img src="imagens/logo-github.jpg" alt=""></a><br>
-       <a href="#" target=""><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+       <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+
+       <a href="yutube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
+
+       <a href="git-hub.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+
+       <a href="instagran.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+
        <a href="#" target=""><img src="imagens/logo-twitter.jpg" alt=""></a><br>
-       <a href="#" target=""><img src="imagens/logo-facebook.jpg" alt=""></a>
+
+       <a href="face.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
        
        
 
