--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
    <main>
+     <p>Esse site não esta responsivo</p>
     <section id="telefone">
+       
       <iframe src="home.html"  name="tela" id="tela"  frameborder="0"></iframe>
 
     </section>
